# zero-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/App/: App.hpp
include/zero/: app-params.hpp  app.hpp  character.hpp  crash-handler.hpp  font-manager.hpp  fs.hpp  game-object.hpp  gl.hpp  input-manager.hpp  iprocessable.hpp  irenderable.hpp  processable-manager.hpp  renderable-manager.hpp  renderer.hpp  shader-program.hpp  shader.hpp  text.hpp  texture.hpp  triangle.hpp  window.hpp
src/: main.cpp
src/App/: App.cpp
src/engine/: app.cpp  character.cpp  crash-handler.cpp  font-manager.cpp  fs.cpp  gl.cpp  input-manager.cpp  processable-manager.cpp  renderable-manager.cpp  renderer.cpp  shader-program.cpp  shader.cpp  text.cpp  texture.cpp  triangle.cpp  window.cpp
src/shaders/: font.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
